RbA Build/src/objects/Pricing_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>UI_Maximum__c</fullName>
        <label>UI Maximum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UI_Minimum__c</fullName>
        <label>UI Minimum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <label>test</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Pricing Configuration</label>
    <nameField>
        <label>Pricing Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>